now added a box

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>GitHub-kata-in-pairs</title>
-  </head>
-  <body>
+</head>
 
-  </body>
+<body>
+    <div class="coder1_box">
+
+    </div>
+</body>
+
 </html>
