--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>GitHub-kata-in-pairs</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
