added my main.js ref

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="utf-8">
     <title>GitHub-kata-in-pairs</title>
     <link rel="stylesheet" href="./main.css">
+    <script src="./main.js" charset="utf-8"></script>
 </head>
 
 <body class="coder1">
     <div class="coder2_box">
 
     </div>
+
 </body>
 
 </html>
